# slot-machine-cpp

./: CMakeLists.txt  README.md  main.cpp  reel.cpp  reel.h  slot-machine.cpp  slot-machine.h  test-slot-machine.cpp  test-slot-machine.h  util.h  window.cpp  window.h
